[gd_scene load_steps=2 format=3 uid="uid://placeholder_gameover"]

[ext_resource type="Script" path="res://scenes/game_over/GameOverScene.gd" id="1"]

[node name="GameOverScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContent" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -150.0
offset_right = 220.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContent"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="CenterContent"]
layout_mode = 2
text = "Waves survived: 0
HP: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContent"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="RestartButton" type="Button" parent="CenterContent"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Restart"
